headers/IOTCAPIs.h


#define	IOTC_ER_NoERROR								0
#define	IOTC_ER_SERVER_NOT_RESPONSE					-1
#define	IOTC_ER_FAIL_RESOLVE_HOSTNAME				-2
#define IOTC_ER_FAIL_CREATE_THREAD                  -5
#define IOTC_ER_FAIL_CREATE_SOCKET                  -6
#define IOTC_ER_FAIL_SOCKET_OPT                     -7
#define IOTC_ER_FAIL_SOCKET_BIND                    -8
#define IOTC_ER_UNLICENSE                           -10
#define IOTC_ER_NOT_INITIALIZED                     -12
#define IOTC_ER_TIMEOUT                             -13
#define IOTC_ER_INVALID_SID                         -14
#define IOTC_ER_FAIL_GET_LOCAL_IP                   -16
#define IOTC_ER_LISTEN_ALREADY_CALLED               -17
#define IOTC_ER_EXCEED_MAX_SESSION                  -18
#define IOTC_ER_CAN_NOT_FIND_DEVICE                 -19
#define IOTC_ER_CONNECT_IS_CALLING                  -20
#define IOTC_ER_DEVICE_NOT_LISTENING                -24
#define IOTC_ER_FAIL_CONNECT_SEARCH                 -27
#define IOTC_ER_AES_CERTIFY_FAIL                    -29
#define IOTC_ER_TCP_TRAVEL_FAILED					-32
#define IOTC_ER_TCP_CONNECT_TO_SERVER_FAILED        -33
#define IOTC_ER_CLIENT_NOT_SECURE_MODE              -34
#define IOTC_ER_CLIENT_SECURE_MODE					-35
#define IOTC_ER_INVALID_MODE                        -38
#define IOTC_ER_EXIT_LISTEN                         -39
#define IOTC_ER_NO_PERMISSION                  		-40
#define IOTC_ER_FAIL_SETUP_RELAY					-42
#define IOTC_ER_NOT_SUPPORT_RELAY					-43
#define IOTC_ER_NO_SERVER_LIST						-44
#define IOTC_ER_DEVICE_MULTI_LOGIN					-45
typedef enum
{
	IOTC_NON_SECURE_MODE = 0,
	IOTC_SECURE_MODE = 1,
	IOTC_ARBITRARY_MODE = 2
} IOTCSessionMode;
P2PAPI_API int  IOTC_Listen(unsigned int nTimeout);
P2PAPI_API int  IOTC_Listen2(unsigned int nTimeout, const char *cszAESKey, IOTCSessionMode nSessionMode);
P2PAPI_API int  IOTC_Connect_ByUID(const char *cszUID);
P2PAPI_API int  IOTC_Get_SessionID(void);
P2PAPI_API int  IOTC_Connect_ByUID_Parallel(const char *cszUID, int SID);
P2PAPI_API int IOTC_Connect_Stop_BySID(int SID);
P2PAPI_API void IOTC_Session_Close(int nIOTCSessionID);
void tutk_platform_free(void *addr);