src/bindings.rs

extern "C" {
    #[doc = " \\brief Used by a device to listen connections from clients"]
    #[doc = ""]
    #[doc = " \\details This function is for a device to listen any connection from clients."]
    #[doc = "\t\t\tIf connection is established with the help of IOTC servers, the"]
    #[doc = "\t\t\tIOTC session ID will be returned in this function and then device and"]
    #[doc = "\t\t\tclient can communicate for the other later by using this IOTC session ID."]
    #[doc = "\t\t\t<br> <br>"]
    #[doc = "\t\t\tThe difference between this function and IOTC_Listen() is that"]
    #[doc = "\t\t\tthis function supports IOTC session established in secure mode. Also,"]
    #[doc = "\t\t\tby specifying IOTC_ARBITRARY_MODE as IOTC session mode, this function can"]
    #[doc = "\t\t\tlet devices establish IOTC session in either non-secure mode and secure"]
    #[doc = "\t\t\tmode according to clients' request."]
    #[doc = ""]
    #[doc = " \\param nTimeout [in] The timeout for this function in unit of millisecond, give 0 means block forever"]
    #[doc = " \\param cszAESKey [in] The AES key for certification. Specify it as NULL will make"]
    #[doc = "\t\t\tIOTC module use predefined AES key."]
    #[doc = " \\param nSessionMode [in] The IOTC session mode that a device want to connect."]
    #[doc = "\t\t\tPlease refer to #IOTCSessionMode for more detail"]
    #[doc = ""]
    #[doc = " \\return IOTC session ID if return value >= 0"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #IOTC_ER_NOT_INITIALIZED The IOTC module is not initialized yet"]
    #[doc = "\t\t\t- #IOTC_ER_EXCEED_MAX_SESSION The number of IOTC sessions has reached maximum in device side"]
    #[doc = "\t\t\t- #IOTC_ER_LISTEN_ALREADY_CALLED The device is already in listen process"]
    #[doc = "\t\t\t- #IOTC_ER_TIMEOUT No connection is established from clients before timeout expires"]
    #[doc = "\t\t\t- #IOTC_ER_EXIT_LISTEN The device stops listening for connections from clients."]
    #[doc = "\t\t\t- #IOTC_ER_INVALID_MODE The IOTC session mode is not valid. Please refer to #IOTCSessionMode"]
    #[doc = "\t\t\t- #IOTC_ER_CLIENT_NOT_SECURE_MODE A client wants to connect to a device in"]
    #[doc = "\t\t\t\t\tnon-secure mode while that device supports secure mode only."]
    #[doc = "\t\t\t- #IOTC_ER_CLIENT_SECURE_MODE A client wants to connect to a device"]
    #[doc = "\t\t\t\t\tin secure mode while that device does not support secure mode."]
    #[doc = "\t\t\t- #IOTC_ER_AES_CERTIFY_FAIL The AES certification fails"]
    #[doc = ""]
    #[doc = " \\attention (1) This function is available on Win32, Linux, Android, iOS and ARC platforms.<br><br>"]
    #[doc = "\t\t\t\t(2) The AES key shall be matched between a device and a client"]
    #[doc = "\t\t\t\tin order to establish connection successfully."]
    pub fn IOTC_Listen2(
        nTimeout: ::std::os::raw::c_uint,
        cszAESKey: *const ::std::os::raw::c_char,
        nSessionMode: IOTCSessionMode,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Used by a client to connect a device"]
    #[doc = ""]
    #[doc = " \\details This function is for a client to connect a device by specifying"]
    #[doc = "\t\t\tthe UID of that device. If connection is established with the"]
    #[doc = "\t\t\thelp of IOTC servers, the IOTC session ID will be returned in this"]
    #[doc = "\t\t\tfunction and then device and client can communicate for the other"]
    #[doc = "\t\t\tlater by using this IOTC session ID."]
    #[doc = ""]
    #[doc = " \\param cszUID [in] The UID of a device that client wants to connect"]
    #[doc = ""]
    #[doc = " \\return IOTC session ID if return value >= 0"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #IOTC_ER_NOT_INITIALIZED The IOTC module is not initialized yet"]
    #[doc = "\t\t\t- #IOTC_ER_CONNECT_IS_CALLING The client is already connecting to a device"]
    #[doc = "\t\t\t- #IOTC_ER_UNLICENSE The specified UID of that device is not licensed or expired"]
    #[doc = "\t\t\t- #IOTC_ER_EXCEED_MAX_SESSION The number of IOTC sessions has reached maximum in client side"]
    #[doc = "\t\t\t- #IOTC_ER_DEVICE_NOT_LISTENING The device is not listening for connection now"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_CONNECT_SEARCH The client stop connecting to the device"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_RESOLVE_HOSTNAME Cannot resolve masters' host name"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_CREATE_THREAD Fails to create threads"]
    #[doc = "\t\t\t- #IOTC_ER_TCP_TRAVEL_FAILED Cannot connect to masters in neither UDP nor TCP"]
    #[doc = "\t\t\t- #IOTC_ER_TCP_CONNECT_TO_SERVER_FAILED Cannot connect to IOTC servers in TCP"]
    #[doc = "\t\t\t- #IOTC_ER_CAN_NOT_FIND_DEVICE IOTC servers cannot locate the specified device"]
    #[doc = "\t\t\t- #IOTC_ER_NO_PERMISSION The specified device does not support TCP relay"]
    #[doc = "\t\t\t- #IOTC_ER_SERVER_NOT_RESPONSE IOTC servers have no response"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_GET_LOCAL_IP Fails to get the client's local IP address"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_SETUP_RELAY Fails to connect the device via relay mode"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_CREATE_SOCKET Fails to create sockets"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_SOCKET_OPT Fails to set up socket options"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_SOCKET_BIND Fails to bind sockets"]
    #[doc = "\t\t\t- #IOTC_ER_NOT_SUPPORT_RELAY Not support relay connection by IOTC servers"]
    #[doc = "\t\t\t- #IOTC_ER_NO_SERVER_LIST No IOTC server information while client connect"]
    #[doc = "\t\t\t- #IOTC_ER_DEVICE_MULTI_LOGIN The connecting device duplicated loggin and may unconnectable"]
    #[doc = ""]
    #[doc = " \\attention This process is a block process."]
    #[doc = ""]
    pub fn IOTC_Connect_ByUID(cszUID: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Used by a client to get a tutk_platform_free session ID."]
    #[doc = ""]
    #[doc = " \\details This function is for a client to get a tutk_platform_free session ID used for a parameter of"]
    #[doc = "          IOTC_Connect_ByUID_Parallel()."]
    #[doc = ""]
    #[doc = " \\return IOTC session ID if return value >= 0"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #IOTC_ER_EXCEED_MAX_SESSION The number of IOTC sessions has reached maximum in client side"]
    #[doc = ""]
    #[doc = " \\attention (1) If you already get a session ID via this function must call IOTC_Connect_ByUID_Parallel() and then"]
    #[doc = "                 it will release session ID resource automatically when connection failed.<br><br>"]
    #[doc = "            (2) If you already get a session ID via this function and want to close it please use IOTC_Session_Close()."]
    pub fn IOTC_Get_SessionID() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Used by a client to connect a device and bind to a specified session ID."]
    #[doc = ""]
    #[doc = " \\details This function is for a client to connect a device by specifying"]
    #[doc = "\t\t\tthe UID of that device, and bind to a tutk_platform_free session ID from IOTC_Get_SessionID()."]
    #[doc = " \t\t\tIf connection is established with the help of IOTC servers,"]
    #[doc = "\t\t\tthe #IOTC_ER_NoERROR will be returned in this function and then device and"]
    #[doc = "\t\t\tclient can communicate for the other later by using this IOTC session ID."]
    #[doc = "\t\t\tIf this function is called by multiple threads, the connections will be"]
    #[doc = "\t\t\tprocessed concurrently."]
    #[doc = ""]
    #[doc = " \\param cszUID [in] The UID of a device that client wants to connect"]
    #[doc = " \\param SID [in] The Session ID got from IOTC_Get_SessionID() the connection should bind to."]
    #[doc = ""]
    #[doc = " \\return IOTC session ID if return value >= 0 and equal to the input parameter SID."]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #IOTC_ER_NOT_INITIALIZED The IOTC module is not initialized yet"]
    #[doc = "\t\t\t- #IOTC_ER_UNLICENSE The specified UID of that device is not licensed or expired"]
    #[doc = "\t\t\t- #IOTC_ER_EXCEED_MAX_SESSION The number of IOTC sessions has reached maximum in client side"]
    #[doc = "\t\t\t- #IOTC_ER_DEVICE_NOT_LISTENING The device is not listening for connection now"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_CONNECT_SEARCH The client stop connecting to the device"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_RESOLVE_HOSTNAME Cannot resolve masters' host name"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_CREATE_THREAD Fails to create threads"]
    #[doc = "\t\t\t- #IOTC_ER_TCP_TRAVEL_FAILED Cannot connect to masters in neither UDP nor TCP"]
    #[doc = "\t\t\t- #IOTC_ER_TCP_CONNECT_TO_SERVER_FAILED Cannot connect to IOTC servers in TCP"]
    #[doc = "\t\t\t- #IOTC_ER_CAN_NOT_FIND_DEVICE IOTC servers cannot locate the specified device"]
    #[doc = "\t\t\t- #IOTC_ER_NO_PERMISSION The specified device does not support TCP relay"]
    #[doc = "\t\t\t- #IOTC_ER_SERVER_NOT_RESPONSE IOTC servers have no response"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_GET_LOCAL_IP Fails to get the client's local IP address"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_SETUP_RELAY Fails to connect the device via relay mode"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_CREATE_SOCKET Fails to create sockets"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_SOCKET_OPT Fails to set up socket options"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_SOCKET_BIND Fails to bind sockets"]
    #[doc = "\t\t\t- #IOTC_ER_NOT_SUPPORT_RELAY Not support relay connection by IOTC servers"]
    #[doc = "\t\t\t- #IOTC_ER_NO_SERVER_LIST No IOTC server information while client connect"]
    #[doc = "\t\t\t- #IOTC_ER_DEVICE_MULTI_LOGIN The connecting device duplicated loggin and may unconnectable"]
    #[doc = "\t\t\t- #IOTC_ER_INVALID_SID The specified IOTC session ID is not valid"]
    #[doc = ""]
    #[doc = " \\attention If you call IOTC_Connect_Stop_BySID() and this function not return yet, and then use the same"]
    #[doc = "              session ID to call again will cause session ID in wrong status."]
    #[doc = ""]
    pub fn IOTC_Connect_ByUID_Parallel(
        cszUID: *const ::std::os::raw::c_char,
        SID: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
